--- a/home.html
+++ b/home.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/homeStyle.css" type="text/css">
-    <link media="screen and (max-width:769px)" rel="stylesheet" href="../CSS/responsive.css">
+    <link rel="stylesheet" href="CSS/homeStyle.css" type="text/css">
+    <link media="screen and (max-width:769px)" rel="stylesheet" href="CSS/responsive.css">
     <title>www.WeLearn.com</title>
 </head>
 
@@ -76,5 +76,5 @@
         Copyright &copy; www.WeLearn.com all rights reserved.
     </footer>
 </body>
-<script src="../js/resp.js"></script>
+<script src="js/resp.js"></script>
 </html>
