--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
                 education develops human personality, thoughts, dealing with others and prepares people for life
                 experiences.
             </p>
-            <img src="/images/img1.jpg" alt="image">
+            <img src="images/img1.jpg" alt="image">
         </div>
         <div class="content right">
             <p class="para">
@@ -57,7 +57,7 @@
                 E-education or e-learning is the delivery of education or any type of training by electronic teaching methods. This electronic method can be a computer or a smartphone where teaching material is accessed by use of the internet usually.
                 E-learning has several benefits over traditional modes of learning in India.
             </p>
-            <img src="/images/elearning.jpg" alt="image">
+            <img src="images/elearning.jpg" alt="image">
         </div>
     </section>
     <section class="box" id="contact">
